--- a/group_vars/workstations/php.yml
+++ b/group_vars/workstations/php.yml
@@ -3,42 +3,43 @@ php_version: '8.2'
 
 php_install_recommends: false
 
+php_enable_webserver: false
+
 php_packages:
-  - php
-  - php-apcu
-  - php-bcmath
-  - php-bz2
-  - php-cgi
-  - php-cli
-  - php-common
-  - php-curl
-  - php-dba
-  - php-dev
-  - php-enchant
-  - php-fpm
-  - php-gd
-  - php-gmp
-  - php-imap
-  - php-interbase
-  - php-intl
-  - php-ldap
-  - php-ldap
-  - php-mbstring
-  - php-memcached
-  - php-mysql
-  - php-odbc
-  - php-opcache
-  - php-phpdbg
-  - php-pspell
-  - php-readline
-  - php-redis
-  - php-snmp
-  - php-soap
-  - php-sqlite3
-  - php-sybase
-  - php-tidy
-  - php-xdebug
-  - php-xml
-  - php-xmlrpc
-  - php-xsl
-  - php-zip
+  - php8.2
+  - php8.2-apcu
+  - php8.2-bcmath
+  - php8.2-bz2
+  - php8.2-cgi
+  - php8.2-cli
+  - php8.2-common
+  - php8.2-curl
+  - php8.2-dba
+  - php8.2-dev
+  - php8.2-enchant
+  - php8.2-fpm
+  - php8.2-gd
+  - php8.2-gmp
+  - php8.2-imap
+  - php8.2-interbase
+  - php8.2-intl
+  - php8.2-ldap
+  - php8.2-ldap
+  - php8.2-mbstring
+  - php8.2-memcached
+  - php8.2-mysql
+  - php8.2-odbc
+  - php8.2-opcache
+  - php8.2-pspell
+  - php8.2-readline
+  - php8.2-redis
+  - php8.2-snmp
+  - php8.2-soap
+  - php8.2-sqlite3
+  - php8.2-sybase
+  - php8.2-tidy
+  - php8.2-xdebug
+  - php8.2-xml
+  - php8.2-xmlrpc
+  - php8.2-xsl
+  - php8.2-zip
