Fixed missing branch on dotfiles

--- a/group_vars/workstations/repositories.yml
+++ b/group_vars/workstations/repositories.yml
@@ -24,7 +24,7 @@ ansible_repositories:
     branch: main
   - name: dotfiles
     repo: git@github.com:shadkaske/ansible-dotfiles
-    branch:
+    branch: main
 
 code_repositories:
   - name: iforms
