--- a/requirements.yml
+++ b/requirements.yml
@@ -3,8 +3,8 @@ roles:
   - name: geerlingguy.php-versions
   - name: geerlingguy.php
   - name: geerlingguy.composer
+  - name: geerlingguy.mysql
   # - name: geerlingguy.nodejs
-  # - name: geerlingguy.mysql
   # - name: darkwizard242.googlechrome
   # - name: gantsign.visual-studio-code
 
