Nodejs with Snaps

--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -1,3 +1,16 @@
+---
+- name: Set NPM Global Path
+  ansible.builtin.set_fact:
+    npm_global: "{{ npm_prefix | default(ansible_env.HOME + '/.local/share/npm') }}"
+
+- name: Ensure NPM Global Directory Exists
+  ansible.builtin.file:
+    path: "{{ npm_global }}"
+    state: directory
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0775"
+
 - name: Install NodeJs
   become: true
   community.general.snap:
@@ -6,23 +19,21 @@
     channel: 18/stable
     classic: true
 
-- name: Register Current npm Prefix
+- name: Set NPM Prefix
   ansible.builtin.command:
-    cmd: npm get prefix
-  register: current_npm_prefix
+    cmd: "npm set prefix {{ npm_global }}"
   tags: skip_ansible_lint
 
-- name: Set My NPM Prefix
-  ansible.builtin.command:
-    cmd: "npm set prefix {{ npm_prefix }}"
-  when: current_npm_prefix.stdout != npm_prefix
-  tags: skip_ansible_lint
+- name: Add npm prefix to user .profile
+  ansible.builtin.lineinfile:
+    path: "{{ ansible_env.HOME }}/.profile"
+    line: "export PATH=\"$PATH:{{ npm_global }}/bin\""
+    state: present
 
 - name: Install Global NPM Packages if Defined
   community.general.npm:
     name: "{{ item }}"
     global: true
-  when: npm_global_packages is defined
-  with_items: "{{ npm_global_packages }}"
+  with_items: "{{ npm_global_packages | default(['yarn']) }}"
 
 # vim: ft=yaml.ansible:
