--- a/group_vars/workstations/php.yml
+++ b/group_vars/workstations/php.yml
@@ -2,6 +2,26 @@
 php_version: '8.2'
 php_install_recommends: false
 php_enable_webserver: false
+
+php_enable_php_fpm: true
+php_fpm_state: started
+php_fpm_enabled_on_boot: true
+
+php_fpm_pools:
+  - pool_name: www
+    pool_template: www.conf.j2
+    pool_listen: "/var/www/php/php-fpm.sock"
+    pool_listen_allowed_clients: "127.0.0.1"
+    pool_pm: dynamic
+    pool_pm_max_children: 5
+    pool_pm_start_servers: 2
+    pool_pm_min_spare_servers: 1
+    pool_pm_max_spare_servers: 3
+    pool_pm_max_requests: 500
+
+php_fpm_pool_user: {{ ansible_user }}
+php_fpm_pool_group: {{ ansible_user }}
+
 php_packages:
   - php8.2
   - php8.2-apcu
