--- a/group_vars/workstations/php.yml
+++ b/group_vars/workstations/php.yml
@@ -10,7 +10,7 @@ php_fpm_enabled_on_boot: true
 php_fpm_pools:
   - pool_name: www
     pool_template: www.conf.j2
-    pool_listen: "/var/www/php/php-fpm.sock"
+    pool_listen: "/var/run/php/php-fpm.sock"
     pool_listen_allowed_clients: "127.0.0.1"
     pool_pm: dynamic
     pool_pm_max_children: 5
@@ -18,6 +18,7 @@ php_fpm_pools:
     pool_pm_min_spare_servers: 1
     pool_pm_max_spare_servers: 3
     pool_pm_max_requests: 500
+    pool_pm_status_path: ""
 
 php_fpm_pool_user: "{{ ansible_user }}"
 php_fpm_pool_group: "{{ ansible_user }}"
