--- a/group_vars/workstations/php.yml
+++ b/group_vars/workstations/php.yml
@@ -1,63 +1,34 @@
 ---
-php_version: "8.2"
-php_install_recommends: false
-php_enable_webserver: false
-
-php_enable_php_fpm: true
-php_fpm_state: started
-php_fpm_enabled_on_boot: true
-
-php_fpm_pools:
-  - pool_name: www
-    pool_template: www.conf.j2
-    pool_listen: "/var/run/php/php-fpm.sock"
-    pool_listen_allowed_clients: "127.0.0.1"
-    pool_pm: dynamic
-    pool_pm_max_children: 5
-    pool_pm_start_servers: 2
-    pool_pm_min_spare_servers: 1
-    pool_pm_max_spare_servers: 3
-    pool_pm_max_requests: 500
-    pool_pm_status_path: ""
-
-php_fpm_pool_user: "{{ ansible_user }}"
-php_fpm_pool_group: "{{ ansible_user }}"
-
 php_packages:
-  - php8.2
-  - php8.2-apcu
-  - php8.2-bcmath
-  - php8.2-bz2
-  - php8.2-cgi
-  - php8.2-cli
-  - php8.2-common
-  - php8.2-curl
-  - php8.2-dba
-  - php8.2-dev
-  - php8.2-enchant
-  - php8.2-fpm
-  - php8.2-gd
-  - php8.2-gmp
-  - php8.2-imap
-  - php8.2-interbase
-  - php8.2-intl
-  - php8.2-ldap
-  - php8.2-ldap
-  - php8.2-mbstring
-  - php8.2-memcached
-  - php8.2-mysql
-  - php8.2-odbc
-  - php8.2-opcache
-  - php8.2-pspell
-  - php8.2-readline
-  - php8.2-redis
-  - php8.2-snmp
-  - php8.2-soap
-  - php8.2-sqlite3
-  - php8.2-sybase
-  - php8.2-tidy
-  - php8.2-xdebug
-  - php8.2-xml
-  - php8.2-xmlrpc
-  - php8.2-xsl
-  - php8.2-zip
+  - php
+  - php-apcu
+  - php-bcmath
+  - php-bz2
+  - php-cgi
+  - php-cli
+  - php-common
+  - php-curl
+  - php-dba
+  - php-devel
+  - php-enchant
+  - php-fpm
+  - php-gd
+  - php-gmp
+  - php-intl
+  - php-ldap
+  - php-mbstring
+  - php-memcached
+  - php-odbc
+  - php-opcache
+  - php-pspell
+  - php-readline
+  - php-redis
+  - php-snmp
+  - php-soap
+  - php-sqlite3
+  - php-tidy
+  - php-xdebug
+  - php-xml
+  - php-xmlrpc
+  - php-xsl
+  - php-zip
