Updated IBM and MSSQL driver install for fedora

--- a/configure.yml
+++ b/configure.yml
@@ -23,6 +23,7 @@
           loop: "{{ php_packages }}"
 
         # TODO: Set PHP FPM to run as user
+        # TODO: Enable PHP FPM
 
         - name: Install Composer and Sqlite
           ansible.builtin.dnf:
