Forgot to install and enable snapd as su

--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -12,6 +12,7 @@
     mode: '0775'
 
 - name: Ensure Snapd is installed and running
+  become: true
   block:
     - name: Install Snapd
       ansible.builtin.package:
