--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,2 @@
 [workstations]
-kubuntu ansible_connection=local ansible_user=kaskshad
-ubuntu24 ansible_connection=ssh ansible_user=shadkaske ansible_host=192.168.122.133
-ubuntu22 ansible_connection=ssh ansible_user=shadkaske ansible_host=192.168.122.217
-fedora ansible_connection=ssh ansible_user=shadkaske ansible_host=192.168.122.170
+fedora ansible_connection=local ansible_user=shadkaske
